@startuml

title __CONNECTION's Class Diagram__\n

    namespace com.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          class com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService {
              {static} - BUSY : String
              {static} - OK : String
              - users : List<VoIPUser>
              + BasicUserConnectionService()
              + connect()
              + disconnect()
              + refuse()
              + tryConnectWith()
              - userIsCurrentlyOnCall()
          }
        }
      }
    }

  

    namespace com.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          class com.bluevortexflare.securevoip.users.connection.SocketConfiguration {
              ~ socket()
          }
        }
      }
    }

  

    namespace com.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          interface com.bluevortexflare.securevoip.users.connection.UserConnectionService {
              {abstract} + connect()
              {abstract} + disconnect()
              {abstract} + refuse()
              {abstract} + tryConnectWith()
          }
        }
      }
    }

  

  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService .up.|> com.bluevortexflare.securevoip.users.connection.UserConnectionService
  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService o-- com.bluevortexflare.securevoip.communication.CommunicationForwarderService : forwarderService
  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService o-- com.bluevortexflare.securevoip.session.UserSessionService : sessionService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
